# SunnyboticsCameraIntegration

./: BillOfMaterials.md  CameraComparison&Choice.md  CameraComparison.md  HardwarePathway&Components.md  Mounting+FOV.md  RobotBaseline.md  WeightCalculation.md
Choices/: CameraComparison&Choice.md  EdgeComputerChoice.md
DailyUpdates/: 7_14_26.md  7_15_26.md  7_16_26.md  7_6_26.md  7_6_26.txt  7_7_26.md  7_8_26.md  7_9_26.md
MetadataLabeling/: README.md  pyproject.toml
MetadataLabeling/config/: example_config.json  example_layout.geojson  rubik_pi_lucid_config.json  usb_webcam_config.json
MetadataLabeling/deploy/scripts/: create_nvme_fstab_entry.sh  install_rubik_pi.sh
MetadataLabeling/deploy/systemd/: solar-capture.service
MetadataLabeling/docs/: BOM_INTEGRATION.md  OPERATIONS.md  RUBIK_PI_DEPLOYMENT.md  VERIFICATION_REPORT.md
MetadataLabeling/examples/: camera_adapter_example.py
MetadataLabeling/src/solar_metadata_tagger/: __init__.py  cli.py  config.py  errors.py  gnss.py  health.py  ids.py  image_validation.py  layout.py  logging_utils.py  mission.py  models.py  nmea.py  runner.py  service.py  storage.py  triggers.py
MetadataLabeling/src/solar_metadata_tagger/camera/: __init__.py  base.py  directory.py  factory.py  lucid_arena.py  opencv.py
MetadataLabeling/tests/: conftest.py  test_camera_directory.py  test_cli.py  test_gnss_history.py  test_ids.py  test_layout.py  test_mission.py  test_nmea.py  test_service.py  test_triggers.py
Updates/: 7_6_26.txt
